@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Opus:PackageDefinition xsi:schemaLocation="http://code.google.com/p/opus file:///E:/dev/GoogleCode/Opus/trunk/bin/Debug/Schema/OpusPackageDependencyV2.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:Opus="http://code.google.com/p/opus">
+<Opus:PackageDefinition xsi:schemaLocation="http://code.google.com/p/opus file:///D:/dev/Opus/trunk/bin/Release/Schema/OpusPackageDependencyV2.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:Opus="http://code.google.com/p/opus">
   <Opus:RequiredPackages>
     <Opus:Package Name="CommandLineProcessor">
+      <Opus:Version Id="dev" />
+    </Opus:Package>
+    <Opus:Package Name="DependencyGenerator">
       <Opus:Version Id="dev" />
     </Opus:Package>
   </Opus:RequiredPackages>
