@@ -1,3 +1,5 @@
+22-Jan-2012 Enabled header dependency generation in C native builds by default. This can be disabled by passing -C.noheaderdeps on the command line to Opus.
+
 21-Jan-2012 Added new plugin package: DependencyGenerator-dev. This adds support for generating .d files containing dependency information from files that have #include statements. Only statements using the quoted version, i.e. #include "file.h" are found. Those using the angle bracket version, i.e. #include <file.h>, are ignored since these are considered to be system headers.
 
 21-Jan-2012 Added Opus.Core.State.Get function with a generic struct type default value argument. If the category/key are not present, the default value is returned.
